Implement JPA entities and repositories for Banco and Cuenta; add integration tests

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,7 +3,8 @@ logging:
     root: OFF
     org:
       springframework: OFF
-
+      # Habilita las consutas en consola
+      hibernate.sql: debug
 spring:
   main:
     banner-mode: OFF
